# SSMCP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/ssmcp/: __init__.py  config.py  exceptions.py  llm_client.py  logger.py  oauth.py  searxng_client.py  server.py  summarization_service.py  timing.py  youtube_client.py
src/ssmcp/middleware/: __init__.py  redis_middleware.py
src/ssmcp/parser/: __init__.py  extractor.py  filter.py  markdown_generator.py  parser.py  protocols.py
src/ssmcp/parser/filters/: __init__.py  css_selector.py  residual_junk.py
src/ssmcp_ui/: main.py
src/ssmcp_ui/templates/: detail.html  error.html  index.html
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_oauth_integration.py  test_redis_logging.py  test_web_fetch.py  test_web_search.py  test_youtube_subtitles.py
tests/unit/: __init__.py  test_config.py  test_css_selector.py  test_extractor.py  test_filter.py  test_llm_client.py  test_logger.py  test_markdown_generator.py  test_oauth.py  test_parser.py  test_redis_middleware.py  test_residual_junk.py  test_searxng_client.py  test_server.py  test_summarization_service.py  test_timing.py  test_youtube_client.py
