[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssmcp"]

[project]
name = "ssmcp"
version = "0.2.0"
description = "Super Simple MCP server"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Anton Sokolskyi"}]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.7.8",
    "fastmcp>=2.13.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2025.12.8",
]

[project.urls]
Repository = "https://github.com/antonsokolskyy/ssmcp"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "S",      # bandit
    "ASYNC",  # flake8-async
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle - docstring conventions
    "N",      # pep8-naming
    "PL",     # Pylint
]
ignore = [
    # Docstring style conflicts - must choose one of each pair
    "D203",   # one-blank-line-before-class (conflicts with D211 - we use D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212 - we use D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # Use of assert - required in tests (assert statements are how tests work)
    "ARG",    # Unused arguments - test fixtures often have required signatures
    "E402",   # Module import not at top - tests need sys.path manipulation before imports
    "D",      # Docstrings - not critical in test functions (tests are self-documenting)
]
"src/ssmcp/config.py" = [
    "S104",   # Binding to all interfaces (0.0.0.0) - intentional for server configuration
]

[[tool.mypy.overrides]]
module = ["crawl4ai.*", "webvtt", "yt_dlp"]
ignore_missing_imports = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/ssmcp",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]

[tool.coverage.run]
source = ["src/ssmcp"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2
